Ignore IntelliJ and project target directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Ignore MacBook generated hidden file
 .DS_Store
 
+# Ignore IntelliJ folder and files
+.idea
+.idea/*
+
+# Ignore build target folder
+target
+target/*
+
 # Compiled class file
 *.class
 
